More robust handling of invalid media ranges.

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,12 @@
-0.1.1 - Apr. 5 2011
+## 0.1.2 - Apr. 15 2013
 
-Added tests and requirments file to distribution.
+* Adding support for '*' media range. I am interpreting this as being
+equivalent to */*.
 
-0.1.0 - Apr. 5 2011
+## 0.1.1 - Apr. 5 2011
 
-Initial code.
+* Added tests and requirments file to distribution.
+
+## 0.1.0 - Apr. 5 2011
+
+* Initial code.
