--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+## 0.1.3 - Oct. 22 2014
+
+* Adding support for function handlers.
+
 ## 0.1.2 - Apr. 15 2013
 
 * Adding support for '*' media range. I am interpreting this as being
